Fix centered mobile portrait cropping

--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -14,6 +14,8 @@
 }
 
 .portrait img {
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
   display: block;
